--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,8 +1,9 @@
 name: Factions
 version: ${project.version}
 main: com.massivecraft.factions.P
-authors: [Olof Larsson, Brett Flannigan, drtshock]
+authors: [Olof Larsson, Brett Flannigan, drtshock, Packet]
 softdepend: [PermissionsEx, Permissions, Essentials, EssentialsChat, HeroChat, iChat, LocalAreaChat, LWC, nChat, ChatManager, CAPI, AuthMe, Vault, Spout, WorldEdit, WorldGuard, AuthDB, CaptureThePoints, CombatTag, dynmap]
+depend: [Lib]
 commands:
   factions:
     description: Reference command for Factions.
